# psychohistory

./: .gitignore  AUTORESEARCH.md  README.md  forecast_charter.md  next steps.md  next_steps.md  plan-disk-efficient-event-warehouse-and-on-demand-source-experiments.md  project.md  project_state.md  pyproject.toml  requirements.txt  roadmap.md  shared_data
autoresearch/: __init__.py  agent_interface.py  candidate_manager.py  config.py  logging.py  runner.py  scoring.py
baselines/: __init__.py  arab_spring_labels.py  backtest.py  features.py  forecast_scaffold_windows.py  france_plumbing_probes.py  gnn.py  graph_builder_ann.py  graph_builder_bag_encoder.py  graph_builder_dual_path_ablation.py  graph_builder_forecast_stack.py  graph_builder_positive_pairs.py  graph_builder_probe_labels.py  graph_builder_query_encoder.py  graph_builder_rerank.py  graph_builder_stage1_train.py  graph_builder_stage2_train.py  location_weekly_history.py  metrics.py  node_feature_contract.py  node_warehouse_build_v0.py  node_warehouse_mmap.py  recurrence.py  source_experiments.py  tabular.py  train_loop_skeleton.py  training_slice.py  wm_ablation_run.py  wm_ablation_train.py
docs/: 2026-04-16-france-gdelt-benchmark-note.md  2026-04-18-wm-ablation-france-scaffold-all-variants.md  2026-04-18-wm-ablation-gnn-gru_gnn-gru_multi-seeds012.md  acled_ingestion.md  autoresearch_objective_sources.md  gdelt_ingestion.md  gnn_export_next_steps.md  gnn_graph_artifact_contract.md  graph-builder-contract-v0.1.md  next_steps_overview.md  probe_expansion_next_steps.md  reformation_foreign_policy_path.md  reviewers-guide.md  source_layer_experiments.md  storage_architecture.md
evals/: __init__.py  graph_artifact_contract.py  objective_eval.py  objective_sources.py  objective_specs.py  probe_functional.py  probe_graph_precompute.py  reporting.py  run_eval.py  schema_constraints.py  structural_validity.py  wikidata_dump_grounding.py  wikidata_grounding.py  wikidata_linking.py
ingest/: __init__.py  acled_raw.py  acled_tape.py  cli_args.py  data_gc.py  event_jsonl_merge.py  event_records.py  event_tape.py  event_warehouse.py  gdelt_raw.py  historical_injection.py  io_utils.py  paths.py  snapshot_export.py  tape_merge.py
probes/: ID-Probe-Maintags-Status.csv  probe-10-panafricanism.yaml  (+25 more)
(+81 files in other folders)
