[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychohistory-forecast-ir"
version = "0.1.0"
description = "Temporal graph IR primitives for a narrow geopolitical forecasting MVP"
readme = "forecast_charter.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["evals*", "schemas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
