[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychohistory-forecast-ir"
version = "0.1.0"
description = "Temporal graph IR primitives for a narrow geopolitical forecasting MVP"
readme = "forecast_charter.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.5",
  "xgboost>=2.0",
  "duckdb>=1.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["evals*", "schemas*", "ingest*", "baselines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -m 'not torch_train and not warehouse and not gdelt_live'"
markers = [
  "torch_train: GNN training tests that require an isolated process (run with: pytest -m torch_train tests/test_gnn.py)",
  "warehouse: DuckDB warehouse integration (opt-in: pytest -m warehouse)",
  "gdelt_live: downloads real GDELT zips (slow, needs network; pytest -m gdelt_live …)",
]
